2009-08-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, src/connection_base.cxx:
 - Made cancel_query public, thanks Don Madden.
 - Hid support for pre-PQcancel libpq versions a bit deeper.
 - Try harder to be graceful about canceling deactivated connections.
2009-08-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
 - Mark statement definition as complete when varargs are added.
2009-08-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
 - Tiny warning fix for 7.3 libpq versions.
2009-08-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/robusttransaction.hxx, src/robusttransaction.cxx:
 - Redid robusttransaction logic; may actually work now.
 src/connection_base.cxx:
 - Use string::empty.
 test/test018.cxx, test/test037.cxx:
 - Better transactor names.
 tools/preprelease:
 - Keep absolute tarball path out of md5sum file.
2009-08-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/internal/callgate.hxx:
 - Cleaned up constness, thanks Kirit Saelensminde.
2009-07-19  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/robusttransaction.hxx, src/connection_base.cxx,
 src/robusttransaction.cxx:
 - Redid robusttransaction.  Was completely broken.
2009-07-12  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/transaction_base.cxx:
 - Throw in_doubt again when trying to commit again while doubt.
2009-07-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cursor.hxx,
 include/pqxx/internal/gates/icursorstream_icursor_iterator.hxx,
 include/pqxx/internal/gates/icursor_iterator-icursorstream.hxx,
 src/cursor.cxx:
 - More call gates.
2009-07-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx,
 include/pqxx/internal/gates/connection-reactivation_avoidance_exemption.hxx,
 src/connection_base.cxx:
 - Set up another call gate.
2009-07-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/Makefile.am, include/pqxx/internal/callgate.hxx,
 include/pqxx/internal/*, src/*.cxx: